--- a/wap/css/child.css
+++ b/wap/css/child.css
@@ -111,7 +111,7 @@
 .pddcp-one-hide .key{margin-bottom:5px; }
 .pddcp-one-hide p{line-height: 23px;color: #909090;}
 .pddcp-one-wp.current .pddcp-one-hide {display: block;}
-.pddc-stock a{margin:1px 1px 5px 1px;position:relative;color: #6d6d6d;display: inline-block;padding: 5px 10px;border:1px solid #ddd;}
+.pddc-stock a{margin:1px 1px 5px 1px;position:relative;color: #6d6d6d;display: inline-block;padding: 5px 10px;}
 .pddc-stock .pd-choice-icon{display: none;}
 .pddc-stock a.current{border:2px solid #ff4576;margin:0px 0px 4px 0px;}
 .pddc-stock a.current .pd-choice-icon{display: inline-block;}
