--- a/wap/css/main.css
+++ b/wap/css/main.css
@@ -88,7 +88,7 @@ a{text-decoration: none;}
 .whitedownarrow{background-position:-7px -230px;}
 
 /*serach-btn*/
-.search-btn{position: absolute;top: -1px;right: 0px;height: 32px;width: 50px;background-color: #D9434E;background-position:13px -123px;background-size: 60px auto;}
+.search-btn{position: absolute;top: -1px;right: 0px;height: 32px;width: 50px;background-color: #FF8000;background-position:13px -123px;background-size: 60px auto;}
 /*pagination*/
 .pagination{text-align: center;}
 .pagination a{color: #6e6e6e;}
