--- a/wap/css/child.css
+++ b/wap/css/child.css
@@ -1,5 +1,5 @@
 /*header*/
-.header-wrap{position: relative;background: #FF8000 ;z-index: 8888;height: 50px;}
+.header-wrap{position: relative;background: #ff9a66 ;z-index: 8888;height: 50px;}
 .header-back{position: absolute;top: 8px;left: 6px;width: 30px;height: 32px;}
 .header-back span{width: 38px;height: 38px;text-indent:-9999px;background-position: -76px 2px;}
 .header-wrap h2{height: 50px;line-height: 50px;font-size: 16px;color: #fff;text-align: center;}
