--- a/wap/css/index.css
+++ b/wap/css/index.css
@@ -3,8 +3,8 @@
 *首页样式
 */
 
-.header-wrap { width: 100%; height: 50px; line-height:48px; background:#FF8000; position: relative; }
-.htsearch-wrap { padding:0px 50px 0px 10px; background:#FF8000;}
+.header-wrap { width: 100%; height: 50px; line-height:48px; background:#ff9a66; position: relative; }
+.htsearch-wrap { padding:0px 50px 0px 10px; background:#ff9a66;}
 .htsearch-wrap .search-btn { top: 8px; right: 0px; }
 .htsearch-input { height: 30px; border:0px; width: 100%; text-indent: 8px; vertical-align: middle; font-weight: normal; font-size: 14px; -webkit-appearance:none; }
 body { -moz-user-select: none; /*火狐*/ -webkit-user-select: none; /*webkit浏览器*/ -ms-user-select: none; /*IE10*/ -khtml-user-select: none; /*早期浏览器*/ user-select: none; -webkit-tap-highlight-color: rgba(255, 255, 255, 0); -webkit-focus-ring-color: rgba(0, 0, 0, 0); -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; padding: 0; margin: 0; background-color: #EBEBEB; color: #000; font-family: 'microsoft yahei', Verdana, Arial, Helvetica, sans-serif; font-size: 16px; line-height: 1.25em; }
