--- a/wap/css/child.css
+++ b/wap/css/child.css
@@ -1,8 +1,8 @@
 /*header*/
-.header-wrap{position: relative;background: #ff9a66 ;z-index: 8888;height: 50px;}
+.header-wrap{position: relative;background: #FFF ;z-index: 8888;height: 50px;}
 .header-back{position: absolute;top: 8px;left: 6px;width: 30px;height: 32px;}
 .header-back span{width: 38px;height: 38px;text-indent:-9999px;background-position: -76px 2px;}
-.header-wrap h2{height: 50px;line-height: 50px;font-size: 16px;color: #fff;text-align: center;}
+.header-wrap h2{height: 50px;line-height: 50px;font-size: 16px;color: #000;text-align: center;}
 .i-main-opera{position: absolute;top: 8px;right: 7px;width: 37px;height: 37px;}
 .i-main-opera span{width: 36px;height: 36px;background-position: 0px 0px;}
 .main-opera-pannel{border-bottom:1px solid #d0cece;background-color: #fff;display:none;}
@@ -127,7 +127,7 @@
 .pgt-go{width: 39px;height: 39px;text-align:center;display: inline-block;background:#D9434E;position: absolute;top: 0px;right: 0px;z-index: 6;}
 .pgt-go .i-go-right{margin-top: 7px;}
 
-.fixed-tab-wp,.opera-product-wp,.invoice_opeara{display: -webkit-box;display: -moz-box;display:box;}
+.fixed-tab-wp,.opera-product-wp,.invoice_opeara{display: -webkit-box;display: -moz-box;display:box; padding-bottom:0px ;}
 .fixed-tab-wp .tab-item,.opera-product-wp .opera-pd-item,.invoice_opeara a{-moz-box-flex:1;box-flex:1;-webkit-box-flex:1;display:block;}
 
 .fixed-tab-wp,.product-infor{text-align:center;background-color:#eee;-webkit-box-shadow:0 1px 1px rgba(0,0,0,.2);box-shadow:0 1px 1px rgba(0,0,0,.2);margin-bottom: 10px;}
