--- a/wap/css/main.css
+++ b/wap/css/main.css
@@ -58,8 +58,8 @@ a{text-decoration: none;}
 .search-btn,.gotop-icon,.grayrightarrow,.home-nav a span,.graydownarrow,.grayuparrow,.whitedownarrow,
 .product-filter .f-icon,.pd-choice-icon,.i-go-right,.s-chk1,.i-del,.i-address,.i-add,.i-minus{display: inline-block;background: url(../images/icon.png) no-repeat;}
 
-.header-back span{display: inline-block; background: url(../images/fanhui.png) ;}
-.i-main-opera span{display: inline-block; background: url(../images/fenlei.png) ;}
+.header-back span{display: inline-block; background: url(../images/ff.png);background-size:20px 20px;}
+.i-main-opera span{display: inline-block; background: url(../images/fenl.png);}
 .i-del{width: 16px;height: 23px;background-position: 0px -732px;}
 .i-address{width: 15px;height: 20px;background-position:-49px -261px;vertical-align: middle;}
 .i-add,.i-minus{width:15px;height:15px;vertical-align: middle;}
