--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -1,1 +1,9 @@
- 
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN""http://www.w3.org/TR/html4/loose.dtd"> 
+<html>
+<head>
+<meta property="qc:admins" content="14023471526175776375" />
+</head>
+<body>
+</body>
+
+</html>
